# CDM_v3.0

./: PTG_FileNames.h  PTG_Func.h  PTG_Func2d.h  PTG_Func2dScalar.cc  README.md  avalanche.cc  avalanche.h  evolution.cc  evolution.h  flux_stationary.cc  flux_stationary.h  func.h  globals.h  influx.h  initsurf.h  iter_aval_new.h  physics_const.h  requirements.txt  rfftw12d.cc  rotatematrix.cc  rotatematrix.h  sepbubble.cc  sepbubble.h  shear.cc  shear_hlr.cc  shear_hlr.h  shore.h  storm.cc  storm.h  vec.h  vegetation.h  wind.cc  wind.h
.github/workflows/: conda-and-cmake.yml
src/: CMakeLists.txt  PTG_Func2dScalar.cc  PTG_Func2dScalar.h  PTG_Func2dVec.cc  PTG_Func2dVec.h  analyze_new.cc  analyze_new.h  dune_evolution.cc  dune_evolution.h  func.cc  globals.cc  influx.cc  initsurf.cc  initsurfalea.cc  initsurfalea.h  initsurfbeach.cc  initsurfbeach.h  iter_aval_new.cc  main.cc  rfftw12d.h  save.cc  save.h  shear.h  shear_hlr.cc  shore.cc  storm.cc  vegetation.cc  wind.cc
